# Compose

./: CMakeLists.txt  composeConfig.cmake
include/compose/: bind_token.hpp  coroutine.hpp  stable_inplace_transform.hpp  stable_transform.hpp  transformed_operation.hpp  unstable_transform.hpp  upcall_guard.hpp  yield_token.hpp
include/compose/detail/: allocator_utils.hpp  assume.hpp  bind_front_handler.hpp  bind_handler_front.hpp  bound_handler.hpp  composed_operation.hpp  coroutine_guard.hpp  coroutine_op.hpp  handler_storage.hpp  lean_ptr.hpp  lean_tuple.hpp  running_in_this_thread.hpp  work_guard.hpp
include/compose/impl/: stable_transform.hpp  transformed_operation.hpp  unstable_transform.hpp  yield_token.hpp
tests/: CMakeLists.txt
tests/compose/: inplace_forward.cpp  lean_tuple.cpp  stable_operation.cpp  unstable_operation.cpp
